--- a/about.html
+++ b/about.html
@@ -43,7 +43,8 @@
                 <img src="images/akhilesh.jpeg" alt="CEO Profile">
                 <div class="ceo-details">
                     <h2>Akhilesh H S</h2>
-                    <p>CEO-Chief Executive Officer</p>
+                    <p>CEO</p>
+                    <p>(Chief Executive Officer)</p>
                     <p>BE</p>
                 </div>
             </div>
@@ -54,7 +55,8 @@
                         <img src="images/Anil kumar.jpeg" alt="Profile 1">
                         <div class="profile-details">
                             <h3>Anil Kumar</h3>
-                            <p>CBDO-Chief Business Development Officer</p>
+                            <p>CBDO</p>
+                            <p>(Chief Business Development Officer)</p>
                             <p>M.Tech(Ph. D)</p>
                         </div>
                     </div>
@@ -63,14 +65,16 @@
                         <div class="profile-details">
                             <h3>Deepthi</h3>
                             <p>MBA</p>
-                            <p>CHRO-Chief Human Resources Officer</p>
+                            <p>CHRO</p>
+                            <p>(Chief Human Resources Officer)</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/kavya.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>N Kavya</h3>
-                            <p>CRO-Chief Revenue Officer</p>
+                            <p>CRO</p>
+                            <p>(Chief Revenue Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -78,7 +82,8 @@
                         <img src="images/navya.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Navyashri S</h3>
-                            <p>CPO-Chief Product Officer</p>
+                            <p>CPO</p>
+                            <p>(Chief Product Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -86,7 +91,8 @@
                         <img src="images/project.png" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Pavan</h3>
-                            <p>COO-Chief Operating Officer</p>
+                            <p>COO</p>
+                            <p>(Chief Operating Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -94,7 +100,8 @@
                         <img src="images/project.png" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Punith</h3>
-                            <p>CIO-Chief Information Officer</p>
+                            <p>CIO</p>
+                            <p>(Chief Information Officer)</p>
                             <p>MCA</p>
                         </div>
                     </div>
@@ -102,7 +109,8 @@
                         <img src="images/sahana.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Sahana G</h3>
-                            <p>CTO-Chief Technology Officer</p>
+                            <p>CTO</p>
+                            <p>(Chief Technology Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -110,7 +118,8 @@
                         <img src="images/sanjana.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Sanjana Samaga</h3>
-                            <p>CLO-Chief Legal Officer</p>
+                            <p>CLO</p>
+                            <p>(Chief Legal Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -118,7 +127,8 @@
                         <img src="images/syed.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Syed MHH</h3>
-                            <p>CMO-Chief Marketing Officer</p>
+                            <p>CMO</p>
+                            <p>(Chief Marketing Officer)</p>
                             <p>BE</p>
                         </div>
                     </div>
@@ -126,7 +136,8 @@
                         <img src="images/project.png" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Veda</h3>
-                            <p>CFO-Chief Financial Officer</p>
+                            <p>CFO</p>
+                            <p>(Chief Financial Officer)</p>
                             <p>B.com</p>
                         </div>
                     </div>
