--- a/about.html
+++ b/about.html
@@ -43,28 +43,28 @@
                 <img src="images/akhilesh.jpeg" alt="CEO Profile">
                 <div class="ceo-details">
                     <h2>Akhilesh H S</h2>
+                    <p>Qualification:BE</p>
                     <p>CEO</p>
                     <p>(Chief Executive Officer)</p>
-                    <p>BE</p>
                 </div>
             </div>
             
             <div class="photo-slider-container">
                 <div class="photo-slider">
                     <div class="profile">
-                        <img src="images/Anil kumar.jpeg" alt="Profile 1">
+                        <img src="images/anil kumar.jpeg" alt="Profile 1">
                         <div class="profile-details">
                             <h3>Anil Kumar</h3>
+                            <p>Qualification:M.Tech(Ph. D)</p>
                             <p>CBDO</p>
                             <p>(Chief Business Development Officer)</p>
-                            <p>M.Tech(Ph. D)</p>
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="profile2.jpg" alt="Profile 2">
+                        <img src="images/deepthi.jpeg" alt="Profile 2">
                         <div class="profile-details">
                             <h3>Deepthi</h3>
-                            <p>MBA</p>
+                            <p>Qualification:MBA</p>
                             <p>CHRO</p>
                             <p>(Chief Human Resources Officer)</p>
                         </div>
@@ -73,74 +73,86 @@
                         <img src="images/kavya.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>N Kavya</h3>
+                            <p>Qualification:BE</p>
                             <p>CRO</p>
                             <p>(Chief Revenue Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/navya.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Navyashri S</h3>
+                            <p>Qualification:BE</p>
                             <p>CPO</p>
                             <p>(Chief Product Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/project.png" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Pavan</h3>
+                            <p>Qualification:BE</p>
                             <p>COO</p>
                             <p>(Chief Operating Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/project.png" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Punith</h3>
+                            <p>Qualification:MCA</p>
                             <p>CIO</p>
                             <p>(Chief Information Officer)</p>
-                            <p>MCA</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/sahana.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Sahana G</h3>
+                            <p>Qualification:BE</p>
                             <p>CTO</p>
                             <p>(Chief Technology Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/sanjana.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Sanjana Samaga</h3>
+                            <p>Qualification:BE</p>
                             <p>CLO</p>
                             <p>(Chief Legal Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
                         <img src="images/syed.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Syed MHH</h3>
+                            <p>Qualification:BE</p>
                             <p>CMO</p>
                             <p>(Chief Marketing Officer)</p>
-                            <p>BE</p>
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="images/project.png" alt="Profile 3">
+                        <img src="images/veda.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Veda</h3>
+                            <p>Qualification:B.com</p>
                             <p>CFO</p>
                             <p>(Chief Financial Officer)</p>
-                            <p>B.com</p>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="trainee-container">
+                <div class="trainee-profile">
+                    <img src="images/Spoorthi.jpeg" alt="Trainee 1">
+                    <h3>Spoorthi S</h3>
+                    <p>Qualification:BE</p>
+                </div>
+                <div class="trainee-profile">
+                    <img src="images/shadakshari.jpeg" alt="Trainee 2">
+                    <h3>Shadakshari</h3>
+                    <p>Qualification:BE</p>
                 </div>
             </div>
             </div>
