--- a/support.html
+++ b/support.html
@@ -159,7 +159,7 @@
         <h2>Self-Help Resources</h2>
         <p>Check out these helpful resources to resolve common issues:</p>
         <ul>
-            <li><a href="#">User Guides</a></li>
+            <li><a href="user_guide.html">User Guides</a></li>
             <li><a href="#">How-to Tutorials</a></li>
             <li><a href="#">System Setup Instructions</a></li>
             <li><a href="#">Blog</a></li>
