--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="photo-slider-container">
                 <div class="photo-slider">
                     <div class="profile">
-                        <img src="images/anil kumar.jpeg" alt="Profile 1">
+                        <img src="images/anil_kumar.jpeg" alt="Profile 1">
                         <div class="profile-details">
                             <h3>Anil Kumar</h3>
                             <p>Qualification:M.Tech(Ph. D)</p>
