--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
             </div>
 
             <div class="box-container">
+                <h1>OUR TEAM</h1>
             <div class="ceo-profile">
                 <img src="images/akhilesh.jpeg" alt="CEO Profile">
                 <div class="ceo-details">
@@ -143,6 +144,7 @@
                     </div>
                 </div>
             </div>
+            <h1>Trainee Members</h1>
             <div class="trainee-container">
                 <div class="trainee-profile">
                     <img src="images/Spoorthi.jpeg" alt="Trainee 1">
