--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="images/project.png" alt="Profile 3">
+                        <img src="images/punith.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Punith</h3>
                             <p>Qualification:MCA</p>
