--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="profile">
-                        <img src="images/project.png" alt="Profile 3">
+                        <img src="images/pavan.jpeg" alt="Profile 3">
                         <div class="profile-details">
                             <h3>Pavan</h3>
                             <p>Qualification:BE</p>
@@ -144,6 +144,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <h1 style="text-align: center;">Trainee Members</h1>
             <div class="trainee-container">
                 <div class="trainee-profile">
