--- a/user_guide.html
+++ b/user_guide.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="back-button-container">
-    <button class="back-button" onclick="loadPage('support.html')">← Back</button>
+    <button class="back-button" onclick="window.location.href='support.html'">← Back</button>
 </div>
 
 </body>
