--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- Image Slider -->
     <div class="slider">
         <div class="slide fade">
-            <img src="images\image1.jpg" alt="Image 1">
+            <img src="images\azelic.jpeg" alt="Image 1">
         </div>
         <div class="slide fade">
-            <img src="images\image2.jpg" alt="Image 2">
+            <img src="images\spedocity.png" alt="Image 2">
         </div>
         <div class="slide fade">
-            <img src="images\image3.jpg" alt="Image 3">
+            <img src="images\logo.png" alt="Image 3">
         </div>
 
         <!-- Navigation Buttons -->
