--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <img src="images\azelic.jpeg" alt="Image 1">
         </div>
         <div class="slide fade">
-            <img src="images\spedocity.png" alt="Image 2">
+            <img src="images\spedocity_sl.png" alt="Image 2">
         </div>
         <div class="slide fade">
-            <img src="images\logo.png" alt="Image 3">
+            <img src="images\logo_sl.png" alt="Image 3">
         </div>
 
         <!-- Navigation Buttons -->
