--- a/header.html
+++ b/header.html
@@ -40,11 +40,11 @@
 
     <!-- Social Media Icons -->
     <div id="socialMedia" class="social-media-menu">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-facebook' style='color:#ffffff'></i></a>
-        <a href="https://wa.me/?text=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff' ></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target=" _blank"><i class='bx bxl-linkedin' style='color:#ffffff' ></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-twitter' style='color:#ffffff'></i></a>
-        <a href="https://t.me/share/url?url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-telegram' style='color:#ffffff'></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://azelictechnologies.netlify.app/" target="_blank"><i class='bx bxl-facebook' style='color:#ffffff'></i></a>
+        <a href="https://wa.me/?text=https://azelictechnologies.netlify.app/" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff' ></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://azelictechnologies.netlify.app/" target=" _blank"><i class='bx bxl-linkedin' style='color:#ffffff' ></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://azelictechnologies.netlify.app/" target="_blank"><i class='bx bxl-twitter' style='color:#ffffff'></i></a>
+        <a href="https://t.me/share/url?url=https://azelictechnologies.netlify.app/" target="_blank"><i class='bx bxl-telegram' style='color:#ffffff'></i></a>
     </div>
 
     <script src="js/header.js" ></script>
